chore: add Copilot instructions for AI agents Add .github/copilot-instructions.md with repository-specific guidance for AI coding agents. Documents .snapshots treatment, config.json inclusion/exclusion rules, manifest discovery steps, concrete Windows cmd commands, and MSTest/dotnet test guidance. No functional code changes.